adding with current version

--- a/faq/index.html
+++ b/faq/index.html
@@ -1,9 +1,6 @@
-
-
-  
 <!--Header Options
-<SEOTitle>FAQ（よくあるご質問）｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>VERSANTの採点や運営方法についてよくあるご質問をまとめています。受験時のよくあるエラーなどご導入前から導入後、運営、レポーティングに至るまでご不明点がございましたら、こちらをご参照ください。</SEODescription>
+<SEOTitle>資料請求・トライアル｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -29,11 +26,11 @@
 <PROP1>NBS-hrd</PROP1>
 <PROP2>NBS-b2bproduct</PROP2>
 <PROP6>now.getHours();</PROP6>
-<PROP20>versant_FAQ</PROP20>
+<PROP20>versant_faq</PROP20>
 <PROP21>versant_faq</PROP21>
 <PROP24>1</PROP24>
 <PROP25>0</PROP25>
---> 
+-->
 
 <!--HeaderBlock-->
 
@@ -43,174 +40,184 @@
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TGNVVPT');</script>
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TGNVVPT');</script>
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>FAQ（よくあるご質問）｜VERSANT（ヴァーサント）【法人版】</title>
-  <meta name="description" content="VERSANTの採点や運営方法についてよくあるご質問をまとめています。受験時のよくあるエラーなどご導入前から導入後、運営、レポーティングに至るまでご不明点がございましたら、こちらをご参照ください。">
+  <title>FAQ・よくある質問｜VERSANT（ヴァーサント）【法人版】</title>
+  <meta name="description"
+    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
   <link rel="canonical" href="https://school.nikkei.co.jp/nn/special/versant/faq/index.html">
 
-  <meta name="robots" content="noarchive"/>
+  <meta name="robots" content="noarchive" />
   <meta property="og:type" content="article">
-  <meta property="og:title" content="FAQ（よくあるご質問）｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="FAQ・よくある質問｜VERSANT（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/faq/index.html">
-  <meta property="og:description" content="VERSANTの採点や運営方法についてよくあるご質問をまとめています。受験時のよくあるエラーなどご導入前から導入後、運営、レポーティングに至るまでご不明点がございましたら、こちらをご参照ください。">
+  <meta property="og:description"
+    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="FAQ（よくあるご質問）｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="FAQ・よくある質問｜VERSANT（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
-  <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
+  <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico"
+    type="image/vnd.microsoft.icon">
   <link rel="icon" href="https://school.nikkei.co.jp/nn/feature/hr/assets/img/android-chrome_NBS.jpg" type="image/png">
-  <link rel="apple-touch-icon-precomposed" href="https://school.nikkei.co.jp/nn/feature/hr/assets/img/apple-touch-icon_NBS.jpg">
+  <link rel="apple-touch-icon-precomposed"
+    href="https://school.nikkei.co.jp/nn/feature/hr/assets/img/apple-touch-icon_NBS.jpg">
 
   <link rel="stylesheet" href="../assets/css/style.css">
-  
+
 </head>
 
 
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGNVVPT"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGNVVPT" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
 
-<header class="l-header">
-  <div class="l-header__cnt">
-    <a href="../">
-      <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
-    </a>
-    <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
-    <label for="nav-toggle" class="l-header__nav-toggle">
-      <span></span>
-      <span></span>
-    </label>
-
-    <nav class="l-header__nav">
-      <ul class="l-header__nav-list">
-        <li class="l-header__nav-item"><a href="../score/index.html" class="l-header__nav-link">スコア</a></li>
-        <li class="l-header__nav-item"><a href="../feature/index.html" class="l-header__nav-link">機能</a></li>
-        <li class="l-header__nav-item"><a href="../price/index.html" class="l-header__nav-link">価格</a></li>
-        <li class="l-header__nav-item"><a href="../casestudy/index.html" class="l-header__nav-link">事例</a></li>
-        <li class="l-header__nav-item"><a href="../faq/index.html" class="l-header__nav-link">FAQ</a></li>
-        <li class="l-header__nav-item"><a href="../library/index.html" class="l-header__nav-link">資料請求</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+  <header class="l-header">
+    <div class="l-header__cnt">
+      <a href="../">
+        <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ"
+          class="l-header__logo">
+      </a>
+      <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
+      <label for="nav-toggle" class="l-header__nav-toggle">
+        <span></span>
+        <span></span>
+      </label>
 
 
-    <main class="p-faq l-bg__gray is__page-head-bg">
-      <div class="l-page-head">
-        <div class="l-inner">
-          <h1 class="l-page-head__name is__en">FAQ</h1>
-        </div>
-      </div>
-        <section class="p-faq__before">
-          <div class="l-inner">
-            <h2>ご導入前のご質問</h2>
-            <div class="p-faq__before-btns">
-              <a href="https://www.versant.jp/faq.html" target="_blank"
-                class="o-btn__square is__gray">VERSANT設問<br>について</a>
-              <a href="https://www.versant.jp/faq.html" target="_blank"
-              class="o-btn__square is__gray">自動採点システム<br>について</a>
-              <a href="https://www.versant.jp/faq.html" target="_blank"
-              class="o-btn__square is__gray">VERSANTスコア<br>について</a>
-              <a href="https://www.versant.jp/forpersonal.html" target="_blank"
-              class="o-btn__square is__gray ">個人で<br class="sp_only">購入したい</a>
-              <a href="https://lcbform.nikkei.com/IQ-versant.html" target="_blank"
-              class="o-btn__square is__gray">法人導入について<br>お問合せフォーム</a>
-            </div>
-          </div>
-        </section>
-
-        <section class="p-faq__before">
-          <div class="l-inner">
-            <h2>ご導入後のご質問</h2>
-            <div class="p-faq__before-btns">
-              <a href="https://www.versant.jp/_common/_js/pdfjs/web/tool_T1_SK3_UserGuide_Brief.pdf" target="_blank" class="o-btn__square is__gray">管理者<br>ユーザーガイド<br>Type1</a>
-              <a href="https://www.versant.jp/_common/_js/pdfjs/web/tool_T2_SK3_UserGuide_Brief.pdf" target="_blank" class="o-btn__square is__gray">管理者<br>ユーザーガイド<br>Type2</a>
-              <a href="https://www.versant.jp/_common/_js/pdfjs/web/viewer.html?file=testscore_error_faq.pdf" target="_blank" class="o-btn__square is__gray">スコアエラー時<br>の対応</a>
-              <a href="https://www.versant.jp/_common/_js/pdfjs/web/viewer.html?file=tool_faq.pdf" target="_blank" class="o-btn__square is__gray ">管理画面<br>(Score Keeper)<br>のFAQ</a>
-              <a href="https://www.versant.jp/result.html" target="_blank" class="o-btn__square is__gray">受講後の<br>スコア確認</a>
-
-              <input type="checkbox" id="popup">
-              <label class="popup-open o-btn__square is__gray clickable" for="popup">VERSANT<br class="sp_only">受験全般<br class="pc_only">に関する<br class="sp_only">お問合せ</label>
-              <div class="popup-overlay">
-                <div class="popup-window">
-                  <label class="popup-close" for="popup">
-                    <img src="../assets/img/faq/btn.svg">
-                  </label>
-                  <div class="popup-cnt">
-                    <p class="popup-text">
-                      <span>TEL: 03-4540-0381<br></span>
-                      【受付時間】<br class="sp_only">平日9:00~12:00, 13:00~17:30<br>
-                      (土日･祝日･年末年始<br class="sp_only">･夏季休業期間は休み)
-                    </p>
-                    <a href="https://www1.entryform.jp/r/form.asp?c=e2e32be74a8232a2f05bc449794ad6401105500573" target="_blank" class="o-btn__square is__black">お問合せフォーム</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-    </main>
-
-
-    <footer class="l-footer">
-
-  <div class="l-footer__lnk_wrp">
-    <div class="l-footer__lnk_inr">
-      <address class="l-footer__info">
-        <div class="l-footer__lnk_logo"><img src="../assets/img/common/logo_footer.svg" alt="日経ビジネススクール NIKKEI BUSINESS SCHOOL"></div>
-          <p class="l-footer__info_head">お問合せ窓口</p>
-          <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
-          <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
-      </address>  
-      
-      <div class="l-footer__lnk_box">
-        <p class="l-footer__lnk_ttl">このサイトについて</p>
-        <ul>
-          <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/nn/info/tos.html" target="_blank">利用規約</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/info/privacy.html" target="_blank">個人情報</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://www.nikkei.com/lounge/help/cookie.html" target="_blank">クッキーポリシー</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/info/copyright.html" target="_blank">著作権</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/nn/info/env.html" target="_blank">利用環境</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/info/trans.html" target="_blank">特定商取引に基づく表示</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/info/index.html" target="_blank">ヘルプセンター</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://support.nikkei.com/app/answers/list/p/24" target="_blank">よくある質問</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://support.nikkei.com/app/ask_0703/p/24" target="_blank">お問い合わせ</a></li>
+      <nav class="l-header__nav">
+        <ul class="l-header__nav-list">
+          <li class="l-header__nav-item"><a href="../score/" class="l-header__nav-link">スコア</a></li>
+          <li class="l-header__nav-item"><a href="../feature/" class="l-header__nav-link">機能</a></li>
+          <li class="l-header__nav-item"><a href="../price/" class="l-header__nav-link">価格</a></li>
+          <li class="l-header__nav-item"><a href="../casestudy/" class="l-header__nav-link">事例</a></li>
+          <li class="l-header__nav-item"><a href="../faq/" class="l-header__nav-link">FAQ</a></li>
+          <li class="l-header__nav-item"><a href="../library/" class="l-header__nav-link">資料請求</a></li>
         </ul>
-      </div>
-      <div class="l-footer__lnk_box">
-        <p class="l-footer__lnk_ttl">日本経済新聞社について</p>
-        <ul>
-          <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/nikkeiinfo/" target="_blank">会社情報・お知らせ</a></li>
-          <li class="l-footer__lnk_lst"><a href="http://reprint.nikkei.co.jp/" target="_blank">記事利用</a></li>
-          <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/privacy/" target="_blank">個人情報の取り扱い</a></li>
-          <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/saiyo/" target="_blank">本社採用案内</a></li>
-          <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/nikkeiinfo/corporate/group/" target="_blank">日経グループ情報</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://marketing.nikkei.com/" target="_blank">広告お申し込みガイド</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://www.nikkei4946.com/index.aspx" target="_blank">紙面紹介と購読案内</a></li>
-          <li class="l-footer__lnk_lst"><a href="https://www.nikkei.com/faq/" target="_blank">法人お問い合わせ窓口</a></li>
-        </ul>
-      </div>
-      <p class="l-footer__copyright">Copyright@2024 Nikkei Inc. All rights reserved.</p>
+      </nav>
     </div>
-  </div>
+  </header>
+
+
+  <main class="p-faq">
+    <main class="p-index">
+      <section class="p-index__tool l-bg__light_gray">
+        <div class="l-inner">
+          <h3 class="o-headline">FAQ / よくある質問</h3>
+          <p class="o-headline__lead">お客様のご質問にお答えします。</p>
+
+          <div style="display:block" class="p-index__tool_cnt">
+            <h4 style="margin-bottom: 22px;font-weight: 700;font-size: 24px;">法人契約の場合、最少開始人数はありますか？</h4>
+            <p>5名様以上で承ります。</p>
+          </div>
+
+          <div style="display:block" class="p-index__tool_cnt">
+            <h4 style="margin-bottom: 22px;font-weight: 700;font-size: 24px;">法人契約から利用開始までの流れを教えてください</h4>
+            <p>日経とのお打ち合わせの後、お申し込みの受験ID数についてご連絡ください。お見積書、注文書を弊社より送付いたします。</p>
+          </div>
+
+          <div style="display:block" class="p-index__tool_cnt">
+            <h4 style="margin-bottom: 22px;font-weight: 700;font-size: 24px;">申し込みからテスト納品までの期間はどれくらいですか？</h4>
+            <p>通常５営業日以内に納品いたします。お急ぎの際はご相談ください。</p>
+          </div>
+
+          <div style="display:block" class="p-index__tool_cnt">
+            <h4 style="margin-bottom: 22px;font-weight: 700;font-size: 24px;">トライアルはできますか？</h4>
+            <p>法人でのご利用をご検討の際に提供いたします。こちらのフォームからお問合せください。<br />
+              <a
+                href="https://lcbform.nikkei.com/OF-versant-trial.html">https://lcbform.nikkei.com/OF-versant-trial.html</a>
+            </p>
+          </div>
+
+          <div style="display:block" class="p-index__tool_cnt">
+            <div class="p-index__tool_cnt_txt" style="width:100%!important">
+              <h4 style="margin-bottom: 22px;font-weight: 700;font-size: 24px;">割引制度はありますか。</h4>
+              <p>50名様以上から数量割引がございます。詳しくはお問合せください。
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </main>
+
+
+  <footer class="l-footer">
+    <div class="l-footer__lnk_wrp">
+      <div class="l-footer__lnk_inr">
+        <address class="l-footer__info">
+          <div class="l-footer__lnk_logo"><img src="../assets/img/common/logo_footer.svg"
+              alt="日経ビジネススクール NIKKEI BUSINESS SCHOOL"></div>
+          <p class="l-footer__info_head">お問合せ窓口</p>
+          <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a>
+            (平日10:00〜17:00)</div>
+          <div class="l-footer__info_txt"><span>Mail</span> : <a
+              href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
+          <a href="https://school.nikkei.co.jp/special/versant/kiyaku_corp.html" target="_blank"
+            class="text_link">VERSANT法人利用規約</a>
+        </address>
+        <div class="l-footer__lnk_box">
+          <p class="l-footer__lnk_ttl">このサイトについて</p>
+          <ul>
+            <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/nn/info/tos.html"
+                target="_blank">利用規約</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/info/privacy.html"
+                target="_blank">個人情報</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://www.nikkei.com/lounge/help/cookie.html"
+                target="_blank">クッキーポリシー</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/info/copyright.html"
+                target="_blank">著作権</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/nn/info/env.html"
+                target="_blank">利用環境</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/info/trans.html"
+                target="_blank">特定商取引に基づく表示</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://school.nikkei.co.jp/info/index.html"
+                target="_blank">ヘルプセンター</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://support.nikkei.com/app/answers/list/p/24"
+                target="_blank">よくある質問</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://support.nikkei.com/app/ask_0703/p/24"
+                target="_blank">お問い合わせ</a></li>
+          </ul>
+        </div>
+        <div class="l-footer__lnk_box">
+          <p class="l-footer__lnk_ttl">日本経済新聞社について</p>
+          <ul>
+            <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/nikkeiinfo/" target="_blank">会社情報・お知らせ</a>
+            </li>
+            <li class="l-footer__lnk_lst"><a href="http://reprint.nikkei.co.jp/" target="_blank">記事利用</a></li>
+            <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/privacy/" target="_blank">個人情報の取り扱い</a></li>
+            <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/saiyo/" target="_blank">本社採用案内</a></li>
+            <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/nikkeiinfo/corporate/group/"
+                target="_blank">日経グループ情報</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://marketing.nikkei.com/" target="_blank">広告お申し込みガイド</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://www.nikkei4946.com/index.aspx" target="_blank">紙面紹介と購読案内</a>
+            </li>
+            <li class="l-footer__lnk_lst"><a href="https://www.nikkei.com/faq/" target="_blank">法人お問い合わせ窓口</a></li>
+          </ul>
+        </div>
+        <p class="l-footer__copyright">Copyright@2024 Nikkei Inc. All rights reserved.</p>
+      </div>
+    </div>
   </footer>
 
 </body>
+
 </html>
 
 <!--FooterBlock-->
