link change in footer

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <header class="l-header">
   <div class="l-header__cnt">
-    <a href="./">
+    <a href="./index.html">
       <img src="./assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
@@ -100,12 +100,12 @@
 
     <nav class="l-header__nav">
       <ul class="l-header__nav-list">
-        <li class="l-header__nav-item"><a href="./score/" class="l-header__nav-link">スコア</a></li>
-        <li class="l-header__nav-item"><a href="./feature/" class="l-header__nav-link">機能</a></li>
-        <li class="l-header__nav-item"><a href="./price/" class="l-header__nav-link">価格</a></li>
-        <li class="l-header__nav-item"><a href="./casestudy/" class="l-header__nav-link">事例</a></li>
-        <li class="l-header__nav-item"><a href="./faq/" class="l-header__nav-link">FAQ</a></li>
-        <li class="l-header__nav-item"><a href="./library/" class="l-header__nav-link">資料請求</a></li>
+        <li class="l-header__nav-item"><a href="./score/index.html" class="l-header__nav-link">スコア</a></li>
+        <li class="l-header__nav-item"><a href="./feature/index.html" class="l-header__nav-link">機能</a></li>
+        <li class="l-header__nav-item"><a href="./price/index.html" class="l-header__nav-link">価格</a></li>
+        <li class="l-header__nav-item"><a href="./casestudy/index.html" class="l-header__nav-link">事例</a></li>
+        <li class="l-header__nav-item"><a href="./faq/index.html" class="l-header__nav-link">FAQ</a></li>
+        <li class="l-header__nav-item"><a href="./library/index.html" class="l-header__nav-link">資料請求</a></li>
       </ul>
     </nav>
   </div>
@@ -212,7 +212,7 @@
               <div class="scroll_track">
                 <ul class="o-case-thumbnail__wrp">
                   <li>
-                    <a href="./casestudy/10/" class="o-case-thumbnail is__10">
+                    <a href="./casestudy/10/index.html" class="o-case-thumbnail is__10">
                       <span class="o-case-thumbnail_number">Case10</span>
                       <h4 class="o-case-thumbnail_copy is__small">世界から多様な人才と<br>出会うために</h4>
                       <p class="o-case-thumbnail_company">構造計画研究所</p>
@@ -220,7 +220,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/09/" class="o-case-thumbnail is__09">
+                    <a href="./casestudy/09/index.html" class="o-case-thumbnail is__09">
                       <span class="o-case-thumbnail_number">Case09</span>
                       <h4 class="o-case-thumbnail_copy is__small">世界でシナジーを<br>生み出すネットワーク<br>構築へ​</h4>
                       <p class="o-case-thumbnail_company">日本酸素ホールディングス</p>
@@ -228,7 +228,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/08/" class="o-case-thumbnail is__08">
+                    <a href="./casestudy/08/index.html" class="o-case-thumbnail is__08">
                       <span class="o-case-thumbnail_number">Case08</span>
                       <h4 class="o-case-thumbnail_copy ">世界基準を備えた<br>グローバル人財の育成に​</h4>
                       <p class="o-case-thumbnail_company">日本触媒</p>
@@ -236,7 +236,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/07/" class="o-case-thumbnail is__07">
+                    <a href="./casestudy/07/index.html" class="o-case-thumbnail is__07">
                       <span class="o-case-thumbnail_number">Case07</span>
                       <h4 class="o-case-thumbnail_copy is__small">VERSANTの分析が<br>コンサルティングを<br>深化</h4>
                       <p class="o-case-thumbnail_company">プログリット</p>
@@ -244,7 +244,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/06/" class="o-case-thumbnail is__06">
+                    <a href="./casestudy/06/index.html" class="o-case-thumbnail is__06">
                       <span class="o-case-thumbnail_number">Case06</span>
                       <h4 class="o-case-thumbnail_copy is__small">世界で勝てる日本発の<br>グローバルビューティー<br>カンパニーを目指して</h4>
                       <p class="o-case-thumbnail_company">資生堂</p>
@@ -252,7 +252,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/05/" class="o-case-thumbnail is__05">
+                    <a href="./casestudy/05/index.html" class="o-case-thumbnail is__05">
                       <span class="o-case-thumbnail_number">Case05</span>
                       <h4 class="o-case-thumbnail_copy">英語コーチングの<br>進化に向けて</h4>
                       <p class="o-case-thumbnail_company">スタディーハッカー</p>
@@ -260,7 +260,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/04/" class="o-case-thumbnail is__04">
+                    <a href="./casestudy/04/index.html" class="o-case-thumbnail is__04">
                       <span class="o-case-thumbnail_number">Case04</span>
                       <h4 class="o-case-thumbnail_copy">ROIで成果を示す<br>レッスンのために</h4>
                       <p class="o-case-thumbnail_company">TORAIZ（トライズ）</p>
@@ -268,7 +268,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/03/" class="o-case-thumbnail is__03">
+                    <a href="./casestudy/03/index.html" class="o-case-thumbnail is__03">
                       <span class="o-case-thumbnail_number">Case03</span>
                       <h4 class="o-case-thumbnail_copy">IT潮流の最先端で活躍<br>するための英語力</h4>
                       <p class="o-case-thumbnail_company">東京海上日動システムズ</p>
@@ -276,7 +276,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/02/" class="o-case-thumbnail is__02">
+                    <a href="./casestudy/02/index.html" class="o-case-thumbnail is__02">
                       <span class="o-case-thumbnail_number">Case02</span>
                       <h4 class="o-case-thumbnail_copy">全職員が海外を<br>経験する組織へ</h4>
                       <p class="o-case-thumbnail_company">日本政策投資銀行（DBJ）</p>
@@ -284,7 +284,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/01/" class="o-case-thumbnail is__01">
+                    <a href="./casestudy/01/index.html" class="o-case-thumbnail is__01">
                       <span class="o-case-thumbnail_number">Case01</span>
                       <h4 class="o-case-thumbnail_copy">世界とつながる<br>英会話力を求めて</h4>
                       <p class="o-case-thumbnail_company">パーソルホールディングス</p>
@@ -292,7 +292,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/10/" class="o-case-thumbnail is__10">
+                    <a href="./casestudy/10/index.html" class="o-case-thumbnail is__10">
                       <span class="o-case-thumbnail_number">Case10</span>
                       <h4 class="o-case-thumbnail_copy is__small">世界から多様な人才と<br>出会うために</h4>
                       <p class="o-case-thumbnail_company">株式会社構造計画研究所</p>
@@ -300,7 +300,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/09/" class="o-case-thumbnail is__09">
+                    <a href="./casestudy/09/index.html" class="o-case-thumbnail is__09">
                       <span class="o-case-thumbnail_number">Case09</span>
                       <h4 class="o-case-thumbnail_copy is__small">世界でシナジーを<br>生み出すネットワーク<br>構築へ​</h4>
                       <p class="o-case-thumbnail_company">日本酸素ホールディングス</p>
@@ -308,7 +308,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/08/" class="o-case-thumbnail is__08">
+                    <a href="./casestudy/08/index.html" class="o-case-thumbnail is__08">
                       <span class="o-case-thumbnail_number">Case08</span>
                       <h4 class="o-case-thumbnail_copy ">世界基準を備えた<br>グローバル人財の育成に​</h4>
                       <p class="o-case-thumbnail_company">日本触媒</p>
@@ -316,7 +316,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="./casestudy/07/" class="o-case-thumbnail is__07">
+                    <a href="./casestudy/07/index.html" class="o-case-thumbnail is__07">
                       <span class="o-case-thumbnail_number">Case07</span>
                       <h4 class="o-case-thumbnail_copy is__small">VERSANTの分析が<br>コンサルティングを<br>深化</h4>
                       <p class="o-case-thumbnail_company">プログリット</p>
@@ -324,7 +324,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/06/" class="o-case-thumbnail is__06">
+                    <a href="./casestudy/06/index.html" class="o-case-thumbnail is__06">
                       <span class="o-case-thumbnail_number">Case06</span>
                       <h4 class="o-case-thumbnail_copy is__small">世界で勝てる日本発の<br>グローバルビューティー<br>カンパニーを目指して</h4>
                       <p class="o-case-thumbnail_company">資生堂</p>
@@ -332,7 +332,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/05/" class="o-case-thumbnail is__05">
+                    <a href="./casestudy/05/index.html" class="o-case-thumbnail is__05">
                       <span class="o-case-thumbnail_number">Case05</span>
                       <h4 class="o-case-thumbnail_copy">英語コーチングの<br>進化に向けて</h4>
                       <p class="o-case-thumbnail_company">スタディーハッカー</p>
@@ -340,7 +340,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/04/" class="o-case-thumbnail is__04">
+                    <a href="./casestudy/04/index.html" class="o-case-thumbnail is__04">
                       <span class="o-case-thumbnail_number">Case04</span>
                       <h4 class="o-case-thumbnail_copy">ROIで成果を示す<br>レッスンのために</h4>
                       <p class="o-case-thumbnail_company">TORAIZ（トライズ）</p>
@@ -348,7 +348,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/03/" class="o-case-thumbnail is__03">
+                    <a href="./casestudy/03/index.html" class="o-case-thumbnail is__03">
                       <span class="o-case-thumbnail_number">Case03</span>
                       <h4 class="o-case-thumbnail_copy">IT潮流の最先端で活躍<br>するための英語力</h4>
                       <p class="o-case-thumbnail_company">東京海上日動システムズ</p>
@@ -356,7 +356,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/02/" class="o-case-thumbnail is__02">
+                    <a href="./casestudy/02/index.html" class="o-case-thumbnail is__02">
                       <span class="o-case-thumbnail_number">Case02</span>
                       <h4 class="o-case-thumbnail_copy">全職員が海外を<br>経験する組織へ</h4>
                       <p class="o-case-thumbnail_company">日本政策投資銀行（DBJ）</p>
@@ -364,7 +364,7 @@
                     </a>
                   </li> 
                   <li>
-                    <a href="./casestudy/01/" class="o-case-thumbnail is__01">
+                    <a href="./casestudy/01/index.html" class="o-case-thumbnail is__01">
                       <span class="o-case-thumbnail_number">Case01</span>
                       <h4 class="o-case-thumbnail_copy">世界とつながる<br>英会話力を求めて</h4>
                       <p class="o-case-thumbnail_company">パーソルホールディングス</p>
@@ -383,14 +383,14 @@
         <section class="p-index__column">
           <h4 class="o-headline is__medium" style="color: white; padding-top: 30px;">Special Column</h4>
           <div class="p-index__column_box">
-            <a href="column/01/" class="p-index__column_link">
+            <a href="column/01/index.html" class="p-index__column_link">
               <img src="assets/img/index/column_01.jpg" alt="コラムサムネイル">
               <div class="p-index__column_link_info">
                 <h5 class="column_head">経営課題は国際基準の英語力。対応急げ</h5>
                 <p class="column_date">2024/03/03</p>
               </div>
             </a>
-            <a href="column/02/" class="p-index__column_link">
+            <a href="column/02/index.html" class="p-index__column_link">
               <img src="assets/img/index/column_02.jpg" alt="コラムサムネイル">
               <div class="p-index__column_link_info">
                 <h5 class="column_head">社員の英語スピーキング力をVERSANTで可視化しませんか</h5>
@@ -450,7 +450,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
