fixed internal link path

--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -86,7 +86,7 @@
 
 <header class="l-header">
   <div class="l-header__cnt">
-    <a href="../">
+    <a href="../index.html">
       <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
@@ -181,7 +181,7 @@
       <div class="p-casestudy__example">
         <div class="l-inner">
           <div class="p-casestudy__post-wrap">
-            <a href="./10/" class="p-casestudy__post">
+            <a href="./10/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-10.jpg" alt="構造計画研究所 サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -194,7 +194,7 @@
                 </picture>
               </div>
             </a>
-            <a href="./09/" class="p-casestudy__post">
+            <a href="./09/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-09.jpg" alt="日本酸素ホールディングス サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -207,7 +207,7 @@
                 </picture>
               </div>
             </a>
-            <a href="./08/" class="p-casestudy__post">
+            <a href="./08/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-08.jpg" alt="日本触媒 サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -220,7 +220,7 @@
                 </picture>
               </div>
             </a>
-            <a href="./06/" class="p-casestudy__post">
+            <a href="./06/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-06.jpg" alt="資生堂 サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -233,7 +233,7 @@
                 </picture>
               </div>
             </a>
-            <a href="./03/" class="p-casestudy__post">
+            <a href="./03/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-03.jpg" alt="東京海上日動システムズ サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -247,7 +247,7 @@
                 </picture>
               </div>
             </a>
-            <a href="./02/" class="p-casestudy__post">
+            <a href="./02/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-02.jpg" alt="日本政策投資銀行（DBJ）サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -261,7 +261,7 @@
                 </picture>
               </div>
             </a>
-            <a href="./01/" class="p-casestudy__post">
+            <a href="./01/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb.jpg" alt="はたらいて、笑おう。PERSOL" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -277,7 +277,7 @@
           </div>
           <div class="p-casestudy__post-wrap">
 
-            <a href="./07/" class="p-casestudy__post">
+            <a href="./07/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-07.jpg" alt="PROGRIT サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -290,7 +290,7 @@
                 </picture>
               </div>
             </a>
-            <a href="./04/" class="p-casestudy__post">
+            <a href="./04/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-04.jpg" alt="TORAIZ（トライズ） サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -304,7 +304,7 @@
                 </picture>
               </div>
             </a>
-            <a href="./05/" class="p-casestudy__post">
+            <a href="./05/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-05.jpg" alt="スタディーハッカー サムネイル" class="p-casestudy__post-thumb">
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
@@ -326,14 +326,14 @@
           <section class="p-index__column">
             <h4 class="o-headline is__medium">Special Column</h4>
             <div class="p-index__column_box">
-              <a href="../column/01/" class="p-index__column_link">
+              <a href="../column/01/index.html" class="p-index__column_link">
                 <img src="../assets/img/index/column_01.jpg" alt="コラムサムネイル">
                 <div class="p-index__column_link_info">
                   <h5 class="column_head">経営課題は国際基準の英語力。対応急げ</h5>
                   <p class="column_date">2024/03/03</p>
                 </div>
               </a>
-              <a href="../column/02/" class="p-index__column_link">
+              <a href="../column/02/index.html" class="p-index__column_link">
                 <img src="../assets/img/index/column_02.jpg" alt="コラムサムネイル">
                 <div class="p-index__column_link_info">
                   <h5 class="column_head">社員の英語スピーキング力をVERSANTで可視化しませんか</h5>
