--- a/column/03/index.html
+++ b/column/03/index.html
@@ -245,7 +245,7 @@
           </div>
         </section>
         <div class="btn-box">
-          <a class="btn-place" href="../../">
+          <a class="btn-place" href="../../index.html">
             <span class="btn">TOPへ戻る</span>
           </a>
           <a class="btn-place" href="../../casestudy/">
