--- a/casestudy/10/index.html
+++ b/casestudy/10/index.html
@@ -86,7 +86,7 @@
 
 <header class="l-header">
   <div class="l-header__cnt">
-    <a href="../../">
+    <a href="../../index.html">
       <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
@@ -308,8 +308,8 @@
   </article>
 
   <div class="l-article__return-btn">
-    <a href="../../"  class="o-btn__square is__black">TOPへ戻る</a>
-    <a href="../"  class="o-btn__square is__black">導入事例/コラム一覧へ戻る</a>
+    <a href="../../index.html"  class="o-btn__square is__black">TOPへ戻る</a>
+    <a href="../index.html"  class="o-btn__square is__black">導入事例/コラム一覧へ戻る</a>
   </div>
 
 </main>
