--- a/score/index.html
+++ b/score/index.html
@@ -86,7 +86,7 @@
 
 <header class="l-header">
   <div class="l-header__cnt">
-    <a href="../">
+    <a href="../index.html">
       <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
@@ -97,12 +97,12 @@
 
       <nav class="l-header__nav">
         <ul class="l-header__nav-list">
-          <li class="l-header__nav-item"><a href="../score/" class="l-header__nav-link">スコア</a></li>
-          <li class="l-header__nav-item"><a href="../feature/" class="l-header__nav-link">機能</a></li>
-          <li class="l-header__nav-item"><a href="../price/" class="l-header__nav-link">価格</a></li>
-          <li class="l-header__nav-item"><a href="../casestudy/" class="l-header__nav-link">事例</a></li>
-          <li class="l-header__nav-item"><a href="../faq/" class="l-header__nav-link">FAQ</a></li>
-          <li class="l-header__nav-item"><a href="../library/" class="l-header__nav-link">資料請求</a></li>
+          <li class="l-header__nav-item"><a href="../score/index.html" class="l-header__nav-link">スコア</a></li>
+          <li class="l-header__nav-item"><a href="../feature/index.html" class="l-header__nav-link">機能</a></li>
+          <li class="l-header__nav-item"><a href="../price/index.html" class="l-header__nav-link">価格</a></li>
+          <li class="l-header__nav-item"><a href="../casestudy/index.html" class="l-header__nav-link">事例</a></li>
+          <li class="l-header__nav-item"><a href="../faq/index.html" class="l-header__nav-link">FAQ</a></li>
+          <li class="l-header__nav-item"><a href="../library/index.html" class="l-header__nav-link">資料請求</a></li>
         </ul>
       </nav>
   </div>
@@ -192,7 +192,7 @@
             <p>上記内容やスコア別スキル向上のヒントなど、<br>VERSANTスコア活用法が、小冊子になりました。</p>
             <img src="../assets/img/score/score-book.png" alt="" class="sp_only">
             <a href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/15?b_cid=nbs_hr_knowhow" class="o-btn__square" target="_blank" data-hu-event="資料ダウンロード" data-hu-actiontype="click">スコア活用BOOKのダウンロード</a>
-            <a href="../library/" class="o-btn__square">その他のお役立ち資料一覧はこちら</a>
+            <a href="../library/index.html" class="o-btn__square">その他のお役立ち資料一覧はこちら</a>
           </div>
           <img src="../assets/img/score/score-book.png" alt="" class="pc_only">
         </div>
